--- a/src/groupproject545/WelcomeScreenGUI.form
+++ b/src/groupproject545/WelcomeScreenGUI.form
@@ -19,13 +19,13 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="ingredientsButton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="mealsButton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="mealPlansButton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
               <Component id="recipesButton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="13" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+              <Component id="mealsButton" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="37" max="32767" attributes="0"/>
+              <Component id="mealPlansButton" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -35,9 +35,11 @@
               <EmptySpace pref="254" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="ingredientsButton" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="recipesButton" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="mealsButton" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="mealPlansButton" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" alignment="1" groupAlignment="3" attributes="0">
+                      <Component id="mealPlansButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="recipesButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="mealsButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
           </Group>
@@ -57,6 +59,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Recipes"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="recipesButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="mealsButton">
       <Properties>
