--- a/src/groupproject545/MealPlanGUI.form
+++ b/src/groupproject545/MealPlanGUI.form
@@ -98,6 +98,11 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jScrollPane2" max="32767" attributes="0"/>
               </Group>
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="443" max="-2" attributes="0"/>
+                  <Component id="deleteMealPlanButton" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
+              </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
@@ -111,7 +116,9 @@
                   </Group>
                   <EmptySpace pref="43" max="32767" attributes="0"/>
                   <Component id="jScrollPane2" min="-2" pref="96" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="193" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="87" max="-2" attributes="0"/>
+                  <Component id="deleteMealPlanButton" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="81" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -208,6 +215,11 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="editMealPlanButtonActionPerformed"/>
           </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="deleteMealPlanButton">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Delete Plan"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
