Tweaked the AddMealPlanGUI.

--- a/src/groupproject545/AddMealPlanGUI.form
+++ b/src/groupproject545/AddMealPlanGUI.form
@@ -153,6 +153,10 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Breakfast, brunch, lunch, etc."/>
       </Properties>
+      <Events>
+        <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="mealTitleTextFieldFocusLost"/>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="mealTitleTextFieldMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
