--- a/src/groupproject545/MealPlanGUI.form
+++ b/src/groupproject545/MealPlanGUI.form
@@ -220,6 +220,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Delete Plan"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="deleteMealPlanButtonActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
