Label beside the recipe title.

--- a/src/groupproject545/RecipesGUI.form
+++ b/src/groupproject545/RecipesGUI.form
@@ -228,7 +228,9 @@
                                       <Component id="jScrollPane1" min="-2" pref="248" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
-                                      <EmptySpace min="-2" pref="173" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="121" max="-2" attributes="0"/>
+                                      <Component id="recipeTitleLabel2" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Component id="recipesComboBox" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
@@ -266,7 +268,10 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="recipesComboBox" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="recipesComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="recipeTitleLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
                   <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="recipeTitleTextField" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -424,6 +429,11 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="removeIngredientButtonActionPerformed"/>
           </Events>
+        </Component>
+        <Component class="javax.swing.JLabel" name="recipeTitleLabel2">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Recipe title:"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
